# pcfg_tool

./: .gitignore  Cargo.toml  Makefile
src/: binarize.rs  grammar.rs  main.rs  parser.rs  rule.rs  sentence.rs  sexp.rs  signature.rs  tree.rs  unk.rs
src/binarized/: debinarize.rs  markovize.rs  mod.rs  node.rs
src/grammar/: bare.rs  chart.rs  intified.rs  mod.rs  parse.rs  rule.rs
