[package]
name = "pcfg_tool"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Hayeß <jhaye@mailbox.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.1"
clap = { version = "3.1.8", features = ["derive"] }
multimap = "0.8.3"
smallstr = "0.3.0"